2009-03-24  Vincent Untz  <vuntz@gnome.org>

	* gnome-session/gsm-inhibit-dialog.c: (add_inhibitor): use
	gsm_util_get_desktop_dirs() instead of just gsm_util_get_app_dirs().
	Also try to handle desktop filenames that are an absolute path the best
	way possible (this happens with OpenOffice.org).
	* gnome-session/gsm-util.[ch]: (gsm_util_get_desktop_dirs): new
	function, to return all the directories where we look up for the
	desktop files.

2009-03-24  Vincent Untz  <vuntz@gnome.org>

	* gnome-session/gsm-inhibit-dialog.c: (add_inhibitor): handle NULL
	errors instead of crashing, which can happen in some cases in
	EggDesktopFile.

2009-03-24  Vincent Untz  <vuntz@gnome.org>

	* gnome-session/gsm-inhibit-dialog.c: use a 32x32 icon size for icons,
	looks better this way.

2009-03-24  Vincent Untz  <vuntz@gnome.org>

	Let all processes cleanly exit on exit.

	* gnome-session/gsm-manager.c: (end_phase): rework with a switch so
	that it's easy to see what's going on for which phases. We also don't
	exit immediately when we reach the exit phase, and instead let
	start_phase() do its work
	(_client_stop): stop a client
	(do_phase_exit): create a 10 second timeout that will force the end of
	the phase, and tells each client to stop via _client_stop() so they can
	have a chance to properly exit before we quit.
	(start_phase): call do_phase_exit() on exit phase

2009-03-18  Vincent Untz  <vuntz@gnome.org>

	* configure.in:
	* doc/man/*: rework the man pages so that they're up-to-date.

2009-03-16  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.26.1

==================== 2.26.0 ====================

2009-03-16  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* configure.in: version 2.26.0

2009-03-16  Vincent Untz  <vuntz@gnome.org>

	* gnome-session/gsm-manager.c: (maybe_save_session): disable session
	saving with "#if 0" for the 2.26.0 release: it's not ready yet.

2009-03-14  Vincent Untz  <vuntz@gnome.org>

	* capplet/gsm-properties-dialog.c: